--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
                 class="fa-sr-only">Telegram</span></a>
         <a href="https://www.instagram.com/sr_kpi/" target="_blank" class="fa-brands fa-instagram"><span
                 class="fa-sr-only">Instagram</span></a>
-        <a href="#" target="_blank" class="fa-brands fa-facebook"><span
+        <a href="https://www.facebook.com/srkpi" target="_blank" class="fa-brands fa-facebook"><span
                 class="fa-sr-only">Facebook</span></a>
     </footer>
 </body>
