--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 {% else %}
     <div class="alert alert-success" role="alert">
         <a href="{% url 'login' %}" class="enter-button">Вхід</a>
-        <p>Вперше тут?
+        <p>Уперше тут?
             <a href="{% url 'register' %}">Реєстрація</a>
         </p>
     </div>
