--- a/templates/login.html
+++ b/templates/login.html
@@ -33,14 +33,14 @@
                 <p>{{ field.label }}: {{ field }}</p>
 
                 {% for error in field.errors %}
-                    <small style="color: red">{{ error }}</small><br>
+                    <small>{{ error }}</small><br>
                 {% endfor %}
 
             {% endfor %}
             <button type="submit" class="enter-button">Вхід</button>
         </form>
         <p><a href="{% url 'password_reset' %}">Забули пароль?</a></p>
-        <p>Вперше тут?
+        <p>Уперше тут?
             <a href="{% url 'register' %}">Реєстрація</a>
         </p>
     </div>
