--- a/templates/register.html
+++ b/templates/register.html
@@ -30,12 +30,15 @@
             <p>{{ field.label }}: {{ field }}</p>
 
             {% for error in field.errors %}
-                <small style="color: red">{{ error }}</small><br>
+                <small>{{ error }}</small><br>
             {% endfor %}
 
         </div>
     {% endfor %}
     <button type="submit" class="enter-button">Зареєструватися</button>
 </form>
+    <p>Уже маєте акаунт?
+        <a href="{% url 'login' %}">Вхід</a>
+    </p>
     </div>
 {% endblock %}
