--- a/templates/index.html
+++ b/templates/index.html
@@ -3,23 +3,24 @@
 {% load static %}
 
 {% block content %}
-<h1 class="main-h1">Вирішення побутових проблем жителів студміста КПІ</h1>
-
-<figure class="instruction main-block">
-    <figcaption>Повідом адміністрацію про наявну проблему за три кроки:</figcaption>
-    <div class="list-decoration">
-        <div class="icons-block">
-            <i class="fa-solid fa-user"><span class="fa-sr-only">Enter</span></i>
-            <i class="fa-solid fa-hand-pointer"><span class="fa-sr-only">Choose</span></i>
-            <i class="fa-solid fa-laptop"><span class="fa-sr-only">Fill</span></i>
+<div class="left">
+        <h1 class="main-h1">Вирішення побутових проблем жителів студміста КПІ</h1>
+        <figure class="instruction main-block">
+        <figcaption>Повідом адміністрацію про наявну проблему за три кроки:</figcaption>
+        <div class="list-decoration">
+            <div class="icons-block">
+                <i class="fa-solid fa-user"><span class="fa-sr-only">Enter</span></i>
+                <i class="fa-solid fa-hand-pointer"><span class="fa-sr-only">Choose</span></i>
+                <i class="fa-solid fa-laptop"><span class="fa-sr-only">Fill</span></i>
+            </div>
+            <ol>
+                <li>Авторизуйся</li>
+                <li>Обери тип проблеми</li>
+                <li>Заповни заявку</li>
+            </ol>
         </div>
-        <ol>
-            <li>Авторизуйся</li>
-            <li>Обери тип проблеми</li>
-            <li>Заповни заявку</li>
-        </ol>
+        </figure>
     </div>
-</figure>
 
 {% if user.is_authenticated %}
     <div class="alert alert-success" role="alert">
@@ -27,12 +28,42 @@
         <a href="{% url 'logout' %}?next=../">Logout?</a>
     </div>
 {% else %}
-    <div class="alert alert-success" role="alert">
-        <a href="{% url 'login' %}" class="enter-button">Вхід</a>
-        <p>Уперше тут?
-            <a href="{% url 'register' %}">Реєстрація</a>
-        </p>
+<div class="right">
+        <h2>Вхід</h2>
+
+        <form action="" method="POST" class="main-block login-form">
+            {% csrf_token %}
+            {% for field in form %}
+                <p>{{ field.label }}: {{ field }}</p>
+
+                {% for error in field.errors %}
+                    <small>{{ error }}</small><br>
+                {% endfor %}
+
+            {% endfor %}
+            <button type="submit" class="enter-button">Вхід</button>
+        </form>
+        <div class="alert alert-success" role="alert">
+            <p><a href="{% url 'password_reset' %}">Забули пароль?</a></p>
+<!--            <a href="{% url 'login' %}" class="enter-button">Вхід</a>-->
+            <p>Уперше тут?
+                <a href="{% url 'register' %}">Реєстрація</a>
+            </p>
+        </div>
+
+
+<!--        <p><a href="{% url 'password_reset' %}">Забули пароль?</a></p>-->
+<!--        <p>Уперше тут?-->
+<!--            <a href="{% url 'register' %}">Реєстрація</a>-->
+<!--        </p>-->
     </div>
+
+<!--    <div class="alert alert-success" role="alert">-->
+<!--        <a href="{% url 'login' %}" class="enter-button">Вхід</a>-->
+<!--        <p>Уперше тут?-->
+<!--            <a href="{% url 'register' %}">Реєстрація</a>-->
+<!--        </p>-->
+<!--    </div>-->
 <!--    <div class="alert alert-success" role="alert">-->
 <!--        <h3>Welcome, unverified aboba.</h3>-->
 <!--        <a href="{% url 'login' %}">Login?</a>-->
