--- a/templates/login.html
+++ b/templates/login.html
@@ -6,28 +6,10 @@
     {% if user.is_autheticated %}
         <h2>Ви вже зареєстровані, {{ user.username }}</h2>
     {% else %}
-    <div class="left">
-        <h1 class="main-h1">Вирішення побутових проблем жителів студміста КПІ</h1>
-        <figure class="instruction main-block">
-        <figcaption>Повідом адміністрацію про наявну проблему за три кроки:</figcaption>
-        <div class="list-decoration">
-            <div class="icons-block">
-                <i class="fa-solid fa-user"><span class="fa-sr-only">Enter</span></i>
-                <i class="fa-solid fa-hand-pointer"><span class="fa-sr-only">Choose</span></i>
-                <i class="fa-solid fa-laptop"><span class="fa-sr-only">Fill</span></i>
-            </div>
-            <ol>
-                <li>Авторизуйся</li>
-                <li>Обери тип проблеми</li>
-                <li>Заповни заявку</li>
-            </ol>
-        </div>
-        </figure>
-    </div>
     <div class="right">
         <h2>Вхід</h2>
 
-        <form action="" method="POST" class="main-block">
+        <form action="" method="POST" class="main-block login-form">
             {% csrf_token %}
             {% for field in form %}
                 <p>{{ field.label }}: {{ field }}</p>
@@ -44,6 +26,5 @@
             <a href="{% url 'register' %}">Реєстрація</a>
         </p>
     </div>
-<!--        <p>Don't have an account? <a href="{% url 'register' %}">Signup here</a></p>-->
     {% endif %}
 {% endblock %}
