--- a/static/css/style.css
+++ b/static/css/style.css
@@ -8,6 +8,7 @@ html, body {
     --main-height: 3.5rem;
     --main-block-bg: rgba(255, 255, 255, 0.82);
     --margin-or-padding: 8%;
+    --main-width: 88%;
     --box-shadow: rgba(0, 0, 0, 0.19) 0 10px 20px, rgba(0, 0, 0, 0.23) 0 6px 6px;
 }
 
@@ -15,12 +16,13 @@ small {
     color: red;
 }
 
-button {
+button, .fa-eye {
     cursor: pointer;
 }
 
 * {
     box-sizing: border-box;
+    overflow: scroll;
 }
 
 body {
@@ -114,40 +116,42 @@ nav a {
 }
 
 main {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
     font-size: 1.5rem;
     text-align: center;
-    padding: var(--main-height) 0 var(--margin-or-padding);
+    padding: var(--main-height) 0;
     background: linear-gradient(#41B562, #9CE4B0);
     flex: 1 0 auto;
 }
 
-main > *, .left > *, .right > * {
+main > *, .side-wrapper > * {
     margin: 2rem auto 0;
-    width: 88%;
+    width: var(--main-width);
 }
 
 .main-block {
-    width: 88%;
+    width: var(--main-width);
     background: var(--main-block-bg);
     border-radius: 35px;
-    max-width: 34rem;
+    max-width: 50rem;
     box-shadow: var(--box-shadow);
 }
 
-h1, h2 {
+.side-wrapper > * {
+    width: 100%;
+}
+
+h1, h2, h3, h4, h5, h6 {
     font-size: 175%;
-    max-width: 34rem;
     color: #ffffff;
+    height: fit-content;
     display: inline-block;
 }
 
 .instruction, form {
-    padding: 1.5rem;
-}
-
-.login-form, .instruction {
-    height: 29rem;
-    min-height: fit-content;
+    padding: 1.7rem;
 }
 
 .instruction {
@@ -158,7 +162,7 @@ h1, h2 {
     font-size: 120%;
 }
 
-.icons-block, .instruction ol {
+.icons-block, .instruction ol, .side-wrapper, .alert {
     margin: 0;
 }
 
@@ -172,32 +176,10 @@ h1, h2 {
     width: 80%;
 }
 
-/*.icons-block {*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    flex-wrap: wrap;*/
-/*    align-items: center;*/
-/*}*/
-
 .instruction ol li, .icons-block i {
     margin-top: 2rem;
     text-align: left;
     font-weight: bold;
-}
-
-.right {
-    width: 100%;
-    margin: 0;
-}
-
-.right > *, .left > * {
-    margin-right: auto;
-    margin-left: auto;
-}
-
-.left {
-    display: none;
-    margin: 0;
 }
 
 form {
@@ -206,6 +188,10 @@ form {
     flex-wrap: wrap;
     text-align: start;
     font-size: 120%;
+}
+
+form div {
+    margin: 0;
 }
 
 form > *, .instruction figcaption {
@@ -223,6 +209,16 @@ input, textarea, select, .enter-button, optgroup {
     border: none;
     font-size: 75%;
     padding: 0.6rem;
+}
+
+.fa-eye {
+    font-size: 70%;
+    text-align: right;
+    margin: -3.7rem 0.7rem 0 0;
+}
+
+.login-form button {
+    margin-top: 2.4rem;
 }
 
 input, select {
@@ -270,9 +266,9 @@ footer a {
 
 /* для зручності */
 
-main div .report{
-    background-color: rgba(156, 228, 176, 0.9);
-}
+/*main div .report{*/
+/*    background-color: rgba(156, 228, 176, 0.9);*/
+/*}*/
 
 /* для зручності */
 
@@ -283,32 +279,28 @@ main div .report{
 }
 
 @media screen and (min-width: 768px) {
+    .login-form, .instruction {
+        height: 23rem;
+    }
 
-    .left, .right {
+    .side-wrapper {
         display: flex;
         flex-direction: column;
         flex-wrap: wrap;
-        width: 50%;
+        width: calc(var(--main-width) / 2);
     }
 
-    .left {
-        float: left;
+    .side-wrapper > * {
+        width: 100%;
     }
 
-    h1, h2 {
-        width: 88%;
-        height: calc(var(--main-height) * 2);
-        font-size: 140%;
+    .side-wrapper .heading{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: calc(var(--main-height) * 1.5);
+        font-size: 150%;
     }
-
-    h1 {
-        line-height: calc((var(--main-height) + 50px) / 2);
-    }
-
-    h2 {
-        line-height: calc(var(--main-height) + 50px);
-    }
-
 }
 
 @media screen and (min-width: 1000px) {
