--- a/templates/base.html
+++ b/templates/base.html
@@ -13,6 +13,7 @@
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
     {% block css_files %}
     {% endblock css_files %}
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
     <script src="{% static 'js/script.js' %}"></script>
     <script src="https://kit.fontawesome.com/72cdf14cdd.js" crossorigin="anonymous"></script>
 </head>
