--- a/templates/password_reset.html
+++ b/templates/password_reset.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 <!-- <p>На ваш Email було надіслано лист з подальшими інструкціями для відновлення</p> -->
-<div class="">
-  	 	<h2>Скинути пароль</h2>
-		<hr>
+<!--<div class="">-->
+  	 	<h1>Скинути пароль</h1>
+<!--		<hr>-->
 		<p>Забули пароль? Введіть ваш Email, ми надішлемо подальші інструкції.</p>
-        <form method="POST">
+        <form method="POST" class="main-block">
             {% csrf_token %}
             {{ password_reset_form }}                    
-            <button type="submit">Отримати листа</button>
+            <button type="submit" class="enter-button">Отримати листа</button>
         </form>
-</div> 
+<!--</div> -->
 {% endblock content %}
