--- a/templates/report-problem.html
+++ b/templates/report-problem.html
@@ -4,14 +4,14 @@
 
 {% block content %}
     <h1>Повідомити про проблему</h1>
-    <form action="" method="POST">
+    <form action="" method="POST" class="main-block">
         {% csrf_token %}
         {% for field in form %}
         <div>
             <p>{{ field.label }}: {{ field }}</p>
 
             {% for error in field.errors %}
-                <small style="color: red">{{ error }}</small><br>
+                <small>{{ error }}</small><br>
             {% endfor %}
         </div>
         {% endfor %}
