--- a/templates/password_reset_complete.html
+++ b/templates/password_reset_complete.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block content %}
-<p>Ваш пароль було змінено, тепер ви можете <a href="{% url 'login' %}">увійти</a></p>
+<p>Ваш пароль було змінено, тепер ви можете <a href="{% url 'index' %}">увійти</a></p>
 {% endblock content %}
