--- a/templates/profile.html
+++ b/templates/profile.html
@@ -78,7 +78,7 @@
    {% else %}
       <h2>Мої повідомлення</h2>
       {% for report in reports %}
-         <div class="">
+         <div class="main-block">
             <h2>{{ report.title }}</h2>
             <p>{{ report.status }}</p>
             <p>{{ report.date }}</p>
