--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -15,6 +15,13 @@ div.report{
     transform: translate(-50%, 5%);
     z-index: 1000;
 }
+.main-block {
+    margin: 5rem auto 0;
+}
+
+.main-block > * {
+    margin: 1rem auto 0;
+}
 
 .all-replies{
     display:none;
@@ -26,4 +33,27 @@ div.report{
 
 .hide-replies{
     display: none;
+}
+
+ul.pagination li {
+    list-style: none;
+    display: inline-block;
+    font-size: 150%;
+    margin: 0 0.3rem;
+}
+
+ul.pagination {
+    padding: 0;
+}
+
+h2 {
+    color: #000000;
+}
+
+h3, h4, h5, h6, p {
+    font-size: 120%;
+}
+
+.enter-button {
+    margin-top: 1rem;
 }
