--- a/templates/folders.html
+++ b/templates/folders.html
@@ -3,12 +3,37 @@
 {% load static %}
 
 {% block content %}
-    <h2>Оберіть гуртожиток, щоб переглянути повідомлення від жителів студмістечка</h2>
+    <h1>Оберіть гуртожиток, щоб переглянути повідомлення від жителів студмістечка</h1>
+    <div class="folders">
     {% for dormitory in dormitories %}
-        <div class="">
+        <div class="main-block folders-elem">
             <h3>{{dormitory}} гуртожиток</h3>
-            <!-- <button onclick="">Переглянути</button> -->
             <a href="{% url 'profile' dormitory %}">Переглянути</a>
         </div>
     {% endfor %}
+        {% for dormitory in dormitories %}
+        <div class="main-block folders-elem">
+            <h3>{{dormitory}} гуртожиток</h3>
+            <a href="{% url 'profile' dormitory %}">Переглянути</a>
+        </div>
+    {% endfor %}
+        {% for dormitory in dormitories %}
+        <div class="main-block folders-elem">
+            <h3>{{dormitory}} гуртожиток</h3>
+            <a href="{% url 'profile' dormitory %}">Переглянути</a>
+        </div>
+    {% endfor %}
+        {% for dormitory in dormitories %}
+        <div class="main-block folders-elem">
+            <h3>{{dormitory}} гуртожиток</h3>
+            <a href="{% url 'profile' dormitory %}">Переглянути</a>
+        </div>
+    {% endfor %}
+        {% for dormitory in dormitories %}
+        <div class="main-block folders-elem">
+            <h3>{{dormitory}} гуртожиток</h3>
+            <a href="{% url 'profile' dormitory %}">Переглянути</a>
+        </div>
+    {% endfor %}
+    </div>
 {% endblock %}
