СПРАВНЕ лого для сайту

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@300;400;500;600&display=swap"
         rel="stylesheet">
     <link href="{% static 'css/style.css' %}" rel="stylesheet" type="text/css">
-    <link href="{% static 'SRS-Logo-TIFF-0-1.png' %}" rel="icon" type="image/png"/>
+    <link href="{% static 'SRS-Logo-TIFF-0-1.ico' %}" rel="icon"/>
     {% block css_files %}
     {% endblock css_files %}
     <script src="{% static 'js/script.js' %}"></script>
