Вилюднила список заявок у зави, забрала деякі  трабли. Last Christmas, I gave you my heart

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -110,7 +110,7 @@ main > *:last-child  {
     max-width: 50rem;
     padding: 1.7rem;
     font-size: 120%;
-    overflow: scroll;
+    overflow: hidden;
     box-shadow: var(--box-shadow);
 }
 
