--- a/static/css/profile.css
+++ b/static/css/profile.css
@@ -1,11 +1,57 @@
 /* для зручності */
 div.report{
     background-color: rgba(156, 228, 176, 0.9);
+	padding-bottom: 10px;
 }
 
 .report-content{
     background-color: rgba(255, 255, 255, 0.9);
+
 }
+.report-col {
+	display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: flex-start;
+	padding: 20px;
+}
+.rep-description {
+	border: 1px solid #111111;
+    padding: 5px;
+    border-radius: 10px;
+	text-align: justify;
+}
+.report-col-first{
+	width: 30%;
+	text-align: left;
+}
+.report-col-second{
+	width: 70%;
+}
+.report-col-second h2{
+	color: black;
+	margin: 0;
+
+}
+.rep-data-status {
+	display: flex;
+}
+.status{
+	padding-left: 20px;
+}
+.report-col-btn{
+	display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+	padding-bottom: 20px;
+}
+.report-col-btn .enter-button {
+	margin: 0;
+}
+
 
 #report-answer {
     display: none;
@@ -14,8 +60,15 @@ div.report{
     top: 5%;
     transform: translate(-50%, 5%);
     z-index: 1000;
+	background-color: darkcyan;
+    padding: 40px;
+	border-radius: 20px;
 }
-
+.report-answer__submit{
+	width: 200px;
+    background-color: black;
+    color: #fff;
+}
 .main-block {
     margin: 4rem auto 0;
     display: flex;
@@ -127,4 +180,29 @@ ul.pagination {
     .information > * {
         justify-content: space-between;
     }
+}
+@media (max-width: 767px){
+	.report-col {
+		flex-direction: column;
+	}
+	.report-col-first {
+		width: 100%;
+		text-align: left;
+	}
+	.report-col-second {
+		width: 100%;
+	}
+	.report-col-btn {
+		display: flex;
+		flex-direction: column;
+		flex-wrap: nowrap;
+		align-items: center;
+		padding-bottom: 20px;
+	}
+	.report-col-btn a, .report-col-btn form, .report-col-btn button{
+		padding-bottom: 10px;
+	}
+	.report-col-second h2{
+		padding-top: 15px;
+	}
 }
