--- a/templates/profile.html
+++ b/templates/profile.html
@@ -10,41 +10,61 @@
       {% if reports %}
          {% for report in reports %}
          <div class="report" id="{{ report.id }}">
-               <div class="report-content">
-                  <p>{{ report.date }}   {{ report.status }} <a onclick="return confirm('Ви впевнені, що бажаєте видалити запис?')" href="{% url 'delete_report' dormitory report.id %}">X</a>
-                     <a href="https://t.me/share/url?url=http://127.0.0.1:8000/&text={{ report.date }}%0A
-{{ report.email }}%0A{{ report.title }}%0AТип: {{ report.problem_type }}%0AГуртожиток: {{ report.dormitory }}%0AКонкретне місце: {{report.exact_place }}%0A
-Опис: {{ report.description }}" target="_blank">
-                        Поширити в Telegram
-                     </a>
-                  </p>
-                  <h3>{{ report.email }}</h3>
-                  <h2>{{ report.title }}</h2>
-                  <h6>{{ report.problem_type }}</h6>
-                  <h6>{{ report.dormitory }}</h6>
-                  <p>{{ report.exact_place }}</p>
-                  <p>{{ report.description }}</p>
-                  <form action="{% url 'change_status' dormitory report.id %}?next={{ request.path|urlencode }}#{{ report.id }}" method="POST">
-                     {% csrf_token %}
-                     {% if report.status == "Неактивна" %}
-                        <button class="enter-button" type="submit">Прийняти</button>
-                     {% elif report.status == "Активна" %}
-                        <button class="enter-button" type="submit" onclick="return confirm('Ви впевнені, що бажаєте закрити запис?')">Закрити</button>
-                     {% endif %}
-                  </form>
-                  {% if report.status == "Активна" %}
-                     <button class="reply-button enter-button" data-value="{{ report.id }}" onclick="showAnswerPopup(this)">Відповісти</button>
-                     <!-- <form action="" method="POST">
-                        {% csrf_token %}
-                        {% for field in form %}
-                           {{ field.label }}
-                           {{ field }}
-                        {% endfor %}
-                        <input type="hidden" name="report_id" value="{{ report.id }}">
-                        <input type="submit" value="Надіслати"/>
-                     </form> -->
-                  {% endif %}
-               </div>
+				<div class="report-content">
+					<div class="report-col">
+						<div class="report-col-first">
+							<div class="rep-data-status">
+								<div class="rep-data">{{ report.date }}</div>
+								<div class="status">{{ report.status }}</div>
+							</div>
+							<div class="rep-student">
+								<span>Студент: </span><span>{{ report.email }}</span>
+							</div>
+							<div class="rep-gurtog">
+								<span>Гуртожиток: </span><span>{{ report.dormitory }}</span><br />
+								<span>Кімната/Поверх: </span><span>{{ report.exact_place }}</span>
+							</div>
+							<div class="rep-service">
+								<span>Послуга: </span><span>{{ report.problem_type }}</span>
+							</div>
+						</div>
+						<div class="report-col-second">
+							<h2>Опис проблеми</h2>
+							<h3>{{ report.title }}</h3>
+							<div class="rep-description">{{ report.description }}</div>
+						</div>
+					</div>
+					<div class="report-col-btn">
+						<a onclick="return confirm('Ви впевнені, що бажаєте видалити запис?')" href="{% url 'delete_report' dormitory report.id %}">X</a>
+						 <a href="https://t.me/share/url?url=http://127.0.0.1:8000/&text={{ report.date }}%0A
+	{{ report.email }}%0A{{ report.title }}%0AТип: {{ report.problem_type }}%0AГуртожиток: {{ report.dormitory }}%0AКонкретне місце: {{report.exact_place }}%0A
+	Опис: {{ report.description }}" target="_blank">
+							Поширити в Telegram
+						 </a>
+						<form action="{% url 'change_status' dormitory report.id %}?next={{ request.path|urlencode }}#{{ report.id }}" method="POST">
+						 {% csrf_token %}
+						 {% if report.status == "Неактивна" %}
+							<button class="enter-button" type="submit">Прийняти</button>
+						 {% elif report.status == "Активна" %}
+							<button class="enter-button" type="submit" onclick="return confirm('Ви впевнені, що бажаєте закрити запис?')">Закрити</button>
+						 {% endif %}
+						</form>
+						{% if report.status == "Активна" %}
+						 <button class="reply-button enter-button" data-value="{{ report.id }}" onclick="showAnswerPopup(this)">Відповісти</button>
+						 <!-- <form action="" method="POST">
+							{% csrf_token %}
+							{% for field in form %}
+							   {{ field.label }}
+							   {{ field }}
+							{% endfor %}
+							<input type="hidden" name="report_id" value="{{ report.id }}">
+							<input type="submit" value="Надіслати"/>
+						 </form> -->
+					  {% endif %}
+					</div>
+				</div>
+
+
 
                {% if report.contact_emails.all %}
                   <button class="show-replies enter-button" data-value="{{ report.id }}" onclick="showReplies(this)">Показати відповіді</button>
@@ -61,7 +81,7 @@
                </div>
             <!-- це має бути сховане, і якщо тисне що хоче переглянути наявні реплаї, тоді показуєм -->
 
-         </div>   
+         </div>
          {% endfor %}
          <form action="" method="POST" id="report-answer" onsubmit="refreshToSameScroll()">
             <button type="button" class="cancel" onclick="hideAnswerPopup()">Х</button>
@@ -71,7 +91,7 @@
                {{ field }}
             {% endfor %}
             <input type="hidden" id="report_id" name="report_id" value="">
-            <input type="submit" value="Надіслати" onclick="hideAnswerPopup()"/>
+            <input class="report-answer__submit" type="submit" value="Надіслати" onclick="hideAnswerPopup()"/>
          </form>
       {% endif %}
 
@@ -130,7 +150,7 @@
          {% endfor %} -->
          <!-- це має бути сховане, і якщо тисне що хоче переглянути наявні реплаї, тоді показуєм -->
       {% endfor %}
-   {% endif %} 
+   {% endif %}
 
    {% if reports.has_other_pages %}
          <ul class="pagination">
@@ -153,5 +173,5 @@
             {% endif %}
          </ul>
       {% endif %}
-      
+
 {% endblock %}
